[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI/TimerNumber.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/TimerColumn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/Timer.gd" type="Script" id=3]

[node name="Timer" type="HBoxContainer"]
margin_right = 704.0
margin_bottom = 256.0
grow_horizontal = 2
custom_constants/separation = 20
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minute" parent="." instance=ExtResource( 1 )]
margin_left = 18.0
margin_right = 149.0
margin_bottom = 256.0

[node name="Minute2" parent="." instance=ExtResource( 1 )]
margin_left = 169.0
margin_right = 300.0
margin_bottom = 256.0

[node name="TimerColumn" parent="." instance=ExtResource( 2 )]
margin_left = 320.0
margin_right = 384.0

[node name="Second" parent="." instance=ExtResource( 1 )]
margin_left = 404.0
margin_right = 535.0
margin_bottom = 256.0

[node name="Second2" parent="." instance=ExtResource( 1 )]
margin_left = 555.0
margin_right = 686.0
margin_bottom = 256.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
